[tool.poetry]
name = "pycwatch"
version = "1.1.4"
description = "A client library for the Cryptowatch Rest API."
authors = ["ljnsn <82611987+ljnsn@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ljnsn/pycwatch"
homepage = "https://github.com/ljnsn/pycwatch"
keywords = ["cryptocurrency", "crypto", "prices", "cryptowatch"]
packages = []

[build-system]
requires = ["poetry-core", "poetry>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.main.dependencies]
python = "^3.7"

[tool.poetry.group.lib.dependencies]
pycwatch-lib = { path = "workspaces/lib", develop = true }

[tool.poetry.group.lib-test.dependencies]
pycwatch-lib = { path = "workspaces/lib", develop = true, extras = ["test"] }

[tool.poetry.group.cli.dependencies]
pycwatch-cli = { path = "workspaces/cli", develop = true }

[tool.poetry.group.cli-test.dependencies]
pycwatch-cli = { path = "workspaces/cli", develop = true, extras = ["test"] }

[tool.commitizen]
name = "cz_gitmoji"
version = "1.1.4"
version_files = ["pyproject.toml:^version"]
tag_format = "v$version"
bump_message = "🔖 bump(release): v$current_version → v$new_version"
update_changelog_on_bump = true

[tool.ruff]
select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "BLE",
  "C",
  "C4",
  "D",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PGH",
  "PIE",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "PT",
  "Q",
  "RET",
  "RUF",
  "S",
  "SIM",
  "T10",
  "T20",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Missing docstring in public module
  "D100",
  # Missing docstring in `__init__`
  "D107",
  # Multi-line docstring summary should start at the first line
  "D212",
  # Class attribute `id` is shadowing a python builtin
  "A003",
  # Missing type annotation for `self` in method
  "ANN101",
  # Missing type annotation for `cls` in classmethod
  "ANN102",
  # Dynamically typed expressions (typing.Any) are disallowed in `*args`
  "ANN401",
]
fix = true
unfixable = ["ERA001", "F401", "F841"]
target-version = "py37"
src = ["workspaces"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.ruff.pep8-naming]
# Allow Pydantic's `@validator` decorator to trigger class method treatment.
classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.black]
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.coverage.run]
branch = true
parallel = true
command_line = "--module pytest"
data_file = "reports/.coverage"
source = ["workspaces"]
omit = ["*/vcr_cassettes/*", "scratchpads/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "@overload",
  'if __name__ == "__main__":',
  "if TYPE_CHECKING:",
]

[tool.coverage.xml] # https://coverage.readthedocs.io/en/latest/config.html#xml
output = "reports/coverage.xml"

[tool.pytest.ini_options] # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
addopts = """--color=yes --doctest-modules --exitfirst --failed-first \
  --strict-config --strict-markers --verbosity=2 \
  --junitxml=reports/pytest.xml --ignore=scratchpads"""

[tool.mypy]
junit_xml = "reports/mypy.xml"
# --strict
disallow_any_generics = true
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
pretty = true
show_column_numbers = true
show_error_codes = true
warn_unreachable = true
# TODO: remove this and make stubs
ignore_missing_imports = true
# TODO: remove once we drop support for 3.7
exclude = "workspaces/lib/src/pycwatch/lib/__init__.py"
# --strict end
